<resources>
    <string name="app_name">Coffee Calculator</string>
    <string name="water_to_coffee_radio_button">Water to coffee</string>
    <string name="coffee_to_water_radio_button">Coffee to water</string>
    <string name="amount_input">water</string>
    <string name="ratio">Ratio</string>
    <string name="coffee_background_description">Coffee background</string>
    <string name="preferences_button">preferencesButton</string>
    <string name="settings">Settings</string>
    <string name="unit_for_water">Unit of water</string>
    <string name="unit_for_coffee">Unit of coffee</string>
    <string name="back_button">BackButton</string>

    <string name="dl">dl</string>
    <string name="cl">cl</string>
    <string name="fl_oz">fl oz</string>
    <string name="us_cup">us cup</string>
    <string name="cup">cup</string>
    <string name="grams">grams</string>
    <string name="tbsp">tbsp</string>
    <string name="tbsp_coffee_spoon">tbsp/coffee spoon</string>
    <string name="oz">oz</string>
    
</resources>
