<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee_beans_on_table720"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/BackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TitleTextView"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/app_name"
            android:textColor="@color/TextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/preferencesButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/preferences_button"
            android:onClick="openPreferences"
            android:src="@drawable/settings_brown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/BackgroundColor"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <RadioButton
            android:id="@+id/waterToCoffeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:onClick="setWaterToCoffee"
            android:text="@string/water_to_coffee_radio_button"
            android:textColor="@color/TextColor"
            android:textColorLink="@android:color/background_dark"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/coffeToWaterRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:onClick="setCoffeeToWater"
            android:text="@string/coffee_to_water_radio_button"
            android:textColor="@color/TextColor"
            android:textColorLink="@android:color/background_dark"
            android:textStyle="bold" />
    </RadioGroup>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/inputBox"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@color/BackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <SeekBar
            android:id="@+id/ratioSeekBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:clickable="false"
            android:fadeScrollbars="false"
            android:max="20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratioTextView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/unitTextView"
            android:layout_width="77dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/grams"
            android:textColor="@color/TextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/amountInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/amountInput" />

        <TextView
            android:id="@+id/ratioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/ratio"
            android:textColor="@color/TextColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountInput" />

        <EditText
            android:id="@+id/amountInput"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/amount_input"
            android:inputType="numberDecimal"
            android:labelFor="@+id/Dl"
            android:textColorHint="@color/TextColor"
            android:textColorLink="@color/TextColor"
            android:textStyle="normal|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/resultBox"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@color/BackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBox">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/TextColor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/TextColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultTextView"
            app:layout_constraintVertical_bias="0.166" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>